--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,10 @@
 <html>
   <head>
+    <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.css">
+
+    <script type="text/javascript" src="libs/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="libs/bootstrap/dist/js/bootstrap.js"></script>
+
     <script type="text/javascript" src="libs/react/umd/react.development.js"></script>
     <script type="text/javascript" src="libs/react-dom/umd/react-dom.development.js"></script>
     <script type="text/javascript" src="libs/babel-standalone/babel.js"></script>
@@ -29,7 +34,15 @@
 
         addNewMember = () => {
           this.props.callback(
-            { id: this.state.nextId, name: '', role: this.state.newRole }
+            {
+              id: this.state.nextId,
+              name: '',
+              role: this.state.newRole,
+              xp: 0,
+              advances: 0,
+              inRecovery: false,
+              capturedBy: null
+            }
           )
           this.setState(() => { return { nextId: this.state.nextId + 1 } })
         }
@@ -78,27 +91,63 @@
 
         render() {
           return (
-            <div className="roster">
-              <table>
-                <tbody>
-                  <tr><th>Name</th><th>Role</th><th>Cost</th></tr>
-                {
-                  this.state.members.map( m =>
-                    m.id === this.state.memberToEdit
-                      ? <tr key={m.id}>
-                          <td><input type="text" onInput={(e) => this.updateGanger(m.id, { name: e.target.value} )} value={m.name} /></td>
-                          <td>{m.role}</td>
-                          <td>{costOfMember(m)}</td>
-                        </tr>
-                      : <tr key={m.id} onClick={this.editGanger.bind(this, m)}>
-                          <td>{m.name}</td>
-                          <td>{m.role}</td>
-                          <td>{costOfMember(m)}</td>
-                        </tr>
-                  )
-                }
-                <NewMemberForm callback={this.addNewMember.bind(this)} />
-              </tbody></table>
+            <div className="container">
+              <div className="row">
+                <div className="col-sm-3">
+                  <table className="table">
+                    <tbody>
+                      <tr><th colSpan="3">GANG NAME</th></tr>
+                      <tr><td colSpan="3"></td></tr>
+                      <tr><th colSpan="3">HOUSE</th></tr>
+                      <tr><td colSpan="3"></td></tr>
+                      <tr><th>GANG RATING</th><th>REPUTATION</th><th>TURF SIZE</th></tr>
+                      <tr><td></td><td></td><td></td></tr>
+                      <tr><th colSpan="3">SPECIAL TERRITORIES</th></tr>
+                      <tr><td colSpan="3"></td></tr>
+                      <tr><th colSpan="3">STASH</th></tr>
+                      <tr><td colSpan="3"></td></tr>
+                    </tbody>
+                  </table>
+                </div>
+                <div className="col-sm-9">
+                  <table className="table">
+                    <tbody>
+                      <tr>
+                        <th>FIGHTER NAME</th>
+                        <th>TYPE</th>
+                        <th>COST</th>
+                        <th>XP</th>
+                        <th>ADV</th>
+                        <th>REC</th>
+                        <th>CAPTURED BY</th>
+                      </tr>
+                    {
+                      this.state.members.map( m =>
+                        m.id === this.state.memberToEdit
+                          ? <tr key={m.id}>
+                              <td><input type="text" onChange={(e) => this.updateGanger(m.id, { name: e.target.value} )} value={m.name} /></td>
+                              <td>{m.role}</td>
+                              <td>{costOfMember(m)}</td>
+                              <td>{m.xp}</td>
+                              <td>{m.advances}</td>
+                              <td>{m.inRecovery ? "Yes" : "No" }</td>
+                              <td>{m.capturedBy == null ? "N/A" : m.capturedBy }</td>
+                            </tr>
+                          : <tr key={m.id} onClick={this.editGanger.bind(this, m)}>
+                              <td>{m.name}</td>
+                              <td>{m.role}</td>
+                              <td>{costOfMember(m)}</td>
+                              <td>{m.xp}</td>
+                              <td>{m.advances}</td>
+                              <td>{m.inRecovery ? "Yes" : "No" }</td>
+                              <td>{m.capturedBy == null ? "N/A" : m.capturedBy }</td>
+                            </tr>
+                      )
+                    }
+                    <NewMemberForm callback={this.addNewMember.bind(this)} />
+                  </tbody></table>
+                </div>
+              </div>
             </div>
           )
         }
