--- a/public/index.html
+++ b/public/index.html
@@ -1,163 +1,40 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <!--
+      manifest.json provides metadata used when your web app is added to the
+      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-    <script type="text/javascript" src="libs/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="libs/bootstrap/dist/js/bootstrap.js"></script>
-
-    <script type="text/javascript" src="libs/react/umd/react.development.js"></script>
-    <script type="text/javascript" src="libs/react-dom/umd/react-dom.development.js"></script>
-    <script type="text/javascript" src="libs/babel-standalone/babel.js"></script>
-
-    <script type="text/babel">
-
-      const roleCosts = {
-        "Leader": 100,
-        "Champion": 80,
-        "Ganger": 50,
-        "Juve": 40
-      }
-
-      function costOfMember(member) {
-        return roleCosts[member.role]
-      }
-
-      class NewMemberForm extends React.Component {
-        state = {
-          nextId: 1,
-          newRole: 'Ganger'
-        }
-
-        handleUpdate = (e) => {
-          this.setState({ newRole: e.target.value })
-        }
-
-        addNewMember = () => {
-          this.props.callback(
-            {
-              id: this.state.nextId,
-              name: '',
-              role: this.state.newRole,
-              xp: 0,
-              advances: 0,
-              inRecovery: false,
-              capturedBy: null
-            }
-          )
-          this.setState(() => { return { nextId: this.state.nextId + 1 } })
-        }
-
-        render() { return (
-            <tr id="controls"><td colSpan="3">
-              <button type="button" onClick={this.addNewMember}>Add Member</button>
-              <select id="newRole" value={this.state.newRole} onChange={this.handleUpdate}>
-                <option value="Leader" >Leader</option>
-                <option value="Champion">Champion</option>
-                <option value="Ganger">Ganger</option>
-                <option value="Juve">Juve</option>
-              </select>
-            </td></tr>
-          )
-        }
-      }
-
-      class Roster extends React.Component {
-        state = {
-          nextId: 1,
-          members: [],
-          memberToEdit: 0
-        }
-
-        addNewMember = (newMember) => {
-          this.setState(() => {return {
-              members: this.state.members.concat([newMember])
-            }}
-          )
-        }
-
-        editGanger = (m) => {
-          this.setState({ memberToEdit: m.id })
-        }
-
-        updateGanger = (id, update) => {
-          this.setState({
-            members: this.state.members.map(m =>
-              m.id === id
-                ? Object.assign(m, update)
-                : m
-            )
-          })
-        }
-
-        render() {
-          return (
-            <div className="container">
-              <div className="row">
-                <div className="col-sm-3">
-                  <table className="table">
-                    <tbody>
-                      <tr><th colSpan="3">GANG NAME</th></tr>
-                      <tr><td colSpan="3"></td></tr>
-                      <tr><th colSpan="3">HOUSE</th></tr>
-                      <tr><td colSpan="3"></td></tr>
-                      <tr><th>GANG RATING</th><th>REPUTATION</th><th>TURF SIZE</th></tr>
-                      <tr><td></td><td></td><td></td></tr>
-                      <tr><th colSpan="3">SPECIAL TERRITORIES</th></tr>
-                      <tr><td colSpan="3"></td></tr>
-                      <tr><th colSpan="3">STASH</th></tr>
-                      <tr><td colSpan="3"></td></tr>
-                    </tbody>
-                  </table>
-                </div>
-                <div className="col-sm-9">
-                  <table className="table">
-                    <tbody>
-                      <tr>
-                        <th>FIGHTER NAME</th>
-                        <th>TYPE</th>
-                        <th>COST</th>
-                        <th>XP</th>
-                        <th>ADV</th>
-                        <th>REC</th>
-                        <th>CAPTURED BY</th>
-                      </tr>
-                    {
-                      this.state.members.map( m =>
-                        m.id === this.state.memberToEdit
-                          ? <tr key={m.id}>
-                              <td><input type="text" onChange={(e) => this.updateGanger(m.id, { name: e.target.value} )} value={m.name} /></td>
-                              <td>{m.role}</td>
-                              <td>{costOfMember(m)}</td>
-                              <td>{m.xp}</td>
-                              <td>{m.advances}</td>
-                              <td>{m.inRecovery ? "Yes" : "No" }</td>
-                              <td>{m.capturedBy == null ? "N/A" : m.capturedBy }</td>
-                            </tr>
-                          : <tr key={m.id} onClick={this.editGanger.bind(this, m)}>
-                              <td>{m.name}</td>
-                              <td>{m.role}</td>
-                              <td>{costOfMember(m)}</td>
-                              <td>{m.xp}</td>
-                              <td>{m.advances}</td>
-                              <td>{m.inRecovery ? "Yes" : "No" }</td>
-                              <td>{m.capturedBy == null ? "N/A" : m.capturedBy }</td>
-                            </tr>
-                      )
-                    }
-                    <NewMemberForm callback={this.addNewMember.bind(this)} />
-                  </tbody></table>
-                </div>
-              </div>
-            </div>
-          )
-        }
-      }
-
-      ReactDOM.render(<Roster />, document.getElementById('table'))
-    </script>
-
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
   </head>
   <body>
-    <div id='table'></div>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
 </html>
